Tests/a2/accept/3.ul
void main(){
	int[5] x;
	x = aa(x[1]);
}

int[5] aa(int x){

}